20090503:
	* preload
	* export to xml
	* import from xml