@@ -17,31 +17,43 @@
 <table width="100%" border="0" bgcolor="lightgrey"><tr><td><table><tr><td>{% block body_main_button %} {% endblock %}</td><td><h2> 1. Основные данные: </h2></td></tr></table></td></tr></table>
 {% block body_main %}
 	<table border="0">
-		<tr>	<td> Кратко: </td>			<td> {{ org.name }} </td>	</tr>
-		<tr>	<td> Полно: </td>			<td> {{ org.fullname }} </td>	</tr>
-		<tr>	<td> ОКОПФ: </td>			<td> {{ org.okopf }} </td>	</tr>
+		<tr>	<td> Кратко: </td>			<td> {{ org.name }} </td>		</tr>
+		<tr>	<td> Полно: </td>			<td> {{ org.fullname }} </td>		</tr>
+		<tr>	<td> ОКОПФ: </td>			<td> {{ org.okopf }} </td>		</tr>
 		<tr>	<td> Дата регистрации: </td>		<td> {{ org.egruldate|date }} </td>	</tr>
-		<tr>	<td> ИНН: </td>				<td> {{ org.inn }} </td>	</tr>
-		<tr>	<td> КПП: </td>				<td> {{ org.kpp }} </td>	</tr>
-		<tr>	<td> ОГРН: </td>			<td> {{ org.ogrn }} </td>	</tr>
-		<tr>	<td> Адрес юридический: </td>		<td> {{ org.laddress }} </td>	</tr>
-		<tr>	<td> Адрес фактический: </td>		<td> {{ org.raddress }} </td>	</tr>
-		<tr>	<td> Рег №: </td>			<td> {{ org.sroregno }} </td>	</tr>
+		<tr>	<td> ИНН: </td>				<td> {{ org.inn }} </td>		</tr>
+		<tr>	<td> КПП: </td>				<td> {{ org.kpp }} </td>		</tr>
+		<tr>	<td> ОГРН: </td>			<td> {{ org.ogrn }} </td>		</tr>
+		<tr>	<td> Адрес юридический: </td>		<td> {{ org.laddress }} </td>		</tr>
+		<tr>	<td> Адрес фактический: </td>		<td> {{ org.raddress }} </td>		</tr>
+		<tr>	<td> Рег №: </td>			<td> {{ org.sroregno }} </td>		</tr>
 		<tr>	<td> Дата регистрации в СРО: </td>	<td> {{ org.sroregdate|date }} </td>	</tr>
 		<tr>	<td> Дата оплаты взноса: </td>		<td> {{ org.paydate|date }} </td>	</tr>
-		<tr>	<td> Сумма взноса: </td>		<td> {{ org.paysum }} </td>	</tr>
+		<tr>	<td> Сумма взноса: </td>		<td> {{ org.paysum }} </td>		</tr>
+	</table>
+{% endblock %}
+{% block body_license %}
+	<table border="0">
 		<tr>	<td> Лицензия: </td>	<td>
 			{% if license %}
 				№ {{ license.regno }} от {{ license.datefrom|date }} по {{ license.datedue|date }}
+				{% block body_license_del_button %} {% endblock %}
 			{% else %}
 				Нет
+				{% block body_license_add_button %} {% endblock %}
 			{% endif %}
 		</td>	</tr>
+	</table>
+{% endblock %}
+{% block body_insurance %}
+	<table border="0">
 		<tr>	<td> Страховка: </td>	<td>
 			{% if insurance %}
 				№ {{ insurance.insno }} от {{ insurance.insdate|date }} на {{ insurance.insum }} руб. в {{ insurance.insurer }}
+				{% block body_insurance_del_button %} {% endblock %}
 			{% else %}
 				Нет
+				{% block body_insurance_add_button %} {% endblock %}
 			{% endif %}
 		</td>	</tr>
 	</table>
