@@ -1,10 +1,10 @@
 {% extends "sro/org_base.html" %}
 {% block body_permit %}
-	<!-- deletable -->
 	<table>
 		<tr>
 			<th> № </th>
 			<th> Дата </th>
+			<th/>
 			<th/>
 		</tr>
 	{% for i in permit %}
