@@ -1,5 +1,9 @@
 {% extends "sro/org_base.html" %}
 {% block body_main_button %}		<input type="button" value="Изменить" onClick="window.location.href='{% url lansite.sro.views.org_edit_main org.id %}#main'"/> {% endblock %}
+{% block body_license_add_button %}	<input type="button" value="Указать" onClick="window.location.href='{% url lansite.sro.views.org_license_add org.id %}#main'"/> {% endblock %}
+{% block body_license_del_button %}	<input type="button" value="Удалить" onClick="window.location.href='{% url lansite.sro.views.org_license_del org.id %}#main'"/> {% endblock %}
+{% block body_insurance_add_button %}	<input type="button" value="Указать" onClick="window.location.href='{% url lansite.sro.views.org_insurance_add org.id %}#main'"/> {% endblock %}
+{% block body_insurance_del_button %}	<input type="button" value="Удалить" onClick="window.location.href='{% url lansite.sro.views.org_insurance_del org.id %}#main'"/> {% endblock %}
 {% block body_okved_button %}		<input type="button" value="Изменить" onClick="window.location.href='{% url lansite.sro.views.org_edit_okved org.id %}#okved'"/> {% endblock %}
 {% block body_phone_button %}		<input type="button" value="Изменить" onClick="window.location.href='{% url lansite.sro.views.org_edit_phone org.id %}#phone'"/> {% endblock %}
 {% block body_email_button %}		<input type="button" value="Изменить" onClick="window.location.href='{% url lansite.sro.views.org_edit_email org.id %}#email'"/> {% endblock %}
