@@ -13,8 +13,17 @@ function doMenu(item) {
 		col.innerHTML="[+]";
 	}
 }
+function SelectAll (state) {
+	items = document.myform.set;
+	for (i = 0; i < items.length; i++) {
+		if (items[i].checked = state) {
+			items[i].checked = state;
+		}
+	}
+}
 </script>
 
+<form action="." method="POST" name="myform">
 <table border="0">
 {% for s, sflag, jobs in stages %}
 	<a name="{{ s.id }}"/>
@@ -30,7 +39,17 @@ function doMenu(item) {
 			</div>
 		</td>
 		<td valign="top"> <input type="button" value="Изменить" onClick="window.location.href='{% url lansite.sro.views.permit_edit permit.id, s.id %}'"/> </td>
+		<td align="center" colspan="3"> <input type="checkbox" name="set" value="{{ s.id }}"/> </td>
 	<tr>
 {% endfor %}
+	<tr> <td colspan="8"> <hr/> </td> </tr>
+	<tr>
+		<td colspan="5" rowspan="2"> <b> ОПТОМ </b> </td>
+		<td align="center"> <input type="button" value="&radic;" title="Выбрать все" onClick="SelectAll(true);"/> </td>
+		<td align="center"> <input type="button" value="x" title="Удалить все" onClick="SelectAll(false);"/> </td>
+		<td align="center"> <input type="reset" title="Восстановить исходные значения" value="R"/> </td>
+	</tr>
+	<tr>	<td align="center" colspan="3"> <input type="submit" value="Записать"/> </td> </tr>
 </table>
+</form>
 {% endblock %}
