@@ -19,64 +19,77 @@
 			<td> <input type="button" value="X" title="Удалить" onClick="window.location.href='{% url lansite.sro.views.person_skill_del person.id, i.id %}#stuff'"/> </td>
 		</tr>
 	{% endfor %}
+	</table>
+<hr/>
 	<!-- add -->
-		<form action="." method="POST">
+<table border="0"> <tr>
+<td>
+	<form action="." method="POST">
+	<table border="0">
 		<tr>
+			<td> {{ form.speciality.label_tag }} </td>
 			<td>
 				<div class="fieldWrapper">
 					{{ form.speciality.errors }}
 					{{ form.speciality }}
 				</div>
 			</td>
+		</tr>
+		<tr>
+			<td> {{ form.skill.label_tag }} </td>
 			<td>
 				<div class="fieldWrapper">
 					{{ form.skill.errors }}
 					{{ form.skill }}
 				</div>
 			</td>
-			<td align="center">
+		</tr>
+		<tr>
+			<td> {{ form.year.label_tag }} </td>
+			<td>
 				<div class="fieldWrapper">
 					{{ form.year.errors }}
 					{{ form.year }}
 				</div>
 			</td>
-			<td align="center">
+		</tr>
+		<tr>
+			<td> {{ form.school.label_tag }} </td>
+			<td>
 				<div class="fieldWrapper">
 					{{ form.school.errors }}
 					{{ form.school }}
 				</div>
 			</td>
-			<td>
-				<input type="submit" value="+" />
-			</td>
-		</tr>
-		</form>
-		<tr bgcolor="lightgrey">
-			<th> Специальность </th>
-			<th> Квалификация </th>
-			<th colspan="3"/>
 		</tr>
 		<tr>
-			<td colspan>
-				<form action="add_speciality/" method="POST">
+			<td/>
+			<td> <input type="submit" value="+" /> </td>
+		</tr>
+	</table>
+	</form>
+</td>
+<td valign="top">
+	<table border="0"> 
+		<tr> <td >
+			<form action="add_speciality/" method="POST">
 				<div class="fieldWrapper">
+					<input type="submit" value="<" title="Добавить новую специальность" value="<"/>
 					{{ form_speciality.name.errors }}
 					{{ form_speciality.name }}
 				</div>
-				<center><input type="submit" value="Добавить в список" title="Добавить новую специальность"/></center>
-				</form>
-			</td>
-			<td valign="top">
-				<form action="add_skill/" method="POST">
+			</form>
+			<form action="add_skill/" method="POST">
 				<div class="fieldWrapper">
+					<input type="submit" value="<" title="Добавить новую квалификацию"/>
 					{{ form_skill.name.errors }}
 					{{ form_skill.name }}
 				</div>
-				<center><input type="submit" value="Добавить в список" title="Добавить новую квалификацию"/></center>
-				</form>
-			</td>
-			<td/>
-		</tr>
+			</form>
+		</td> </tr>
 	</table>
-	<input type="button" value="Закончить" onClick="window.location.href='{% url lansite.sro.views.person_view person.id %}#skill'"/>
+</td>
+</tr>
+</table>
+<input type="button" value="Закончить" onClick="window.location.href='{% url lansite.sro.views.person_view person.id %}#skill'"/>
 {% endblock %}
