@@ -16,6 +16,10 @@ urlpatterns = patterns('lansite.sro.views',
 	(r'^org/$',							'org_list'),
 	(r'^org/(?P<org_id>\d+)/$',					'org_view'),
 	(r'^org/(?P<org_id>\d+)/edit/main/$',				'org_edit_main'),
+	(r'^org/(?P<org_id>\d+)/license/add/$',				'org_license_add'),
+	(r'^org/(?P<org_id>\d+)/license/del/$',				'org_license_del'),
+	(r'^org/(?P<org_id>\d+)/insurance/add/$',			'org_insurance_add'),
+	(r'^org/(?P<org_id>\d+)/insurance/del/$',			'org_insurance_del'),
 	(r'^org/(?P<org_id>\d+)/edit/okved/$',				'org_edit_okved'),
 	(r'^org/(?P<org_id>\d+)/edit/okved/(?P<item_id>\d+)/del/$',	'org_edit_okved_del'),
 	(r'^org/(?P<org_id>\d+)/edit/phone/$',				'org_edit_phone'),
